--- a/app/src/main/res/layout/bottom_sheet_credit.xml
+++ b/app/src/main/res/layout/bottom_sheet_credit.xml
@@ -47,7 +47,7 @@
         android:layout_marginStart="25dp"
         android:text="Rp. 150,000"
         style="@style/h3_bold"
-        android:textColor="#7F3F51B5" />
+        android:textColor="#7F7C7B7B" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -73,7 +73,7 @@
                 android:layout_marginStart="25dp"
                 android:text="Rp. 150,000"
                 style="@style/h3_bold"
-                android:textColor="#7FEC5624" />
+                android:textColor="#7C7B7B7F" />
 
             <TextView
                 android:id="@+id/paid_date"
@@ -127,7 +127,6 @@
             android:id="@+id/paid_input"
             android:layout_width="250dp"
             android:layout_height="@dimen/edit_text_height"
-            style="@style/editText"
             android:layout_marginStart="25dp"
             android:inputType="number"
             android:hint="Rp. 0"/>
@@ -135,7 +134,7 @@
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/paid_button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/medium_button_height"
             android:text="Bayar"
             style="@style/blueButtonStyle"
             android:layout_marginStart="25dp"/>
