--- a/app/src/main/res/layout/bottom_sheet_due_date.xml
+++ b/app/src/main/res/layout/bottom_sheet_due_date.xml
@@ -41,7 +41,7 @@
         android:id="@+id/dateButton"
         style="@style/blueButtonStyle"
         android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/medium_button_height"
         android:text="Pilih tanggal"
         android:layout_marginStart="15dp"
         android:layout_marginTop="10dp"/>
@@ -65,7 +65,7 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/doneButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/medium_button_height"
         android:layout_marginTop="20dp"
         android:text="Done"
         style="@style/blueButtonStyle"
