--- a/app/src/main/res/layout/bottom_sheet_product_sort.xml
+++ b/app/src/main/res/layout/bottom_sheet_product_sort.xml
@@ -75,7 +75,7 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/doneButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/medium_button_height"
         android:layout_marginTop="20dp"
         android:text="Done"
         style="@style/blueButtonStyle"
