--- a/app/src/main/res/layout/bottom_sheet_restock_quantity.xml
+++ b/app/src/main/res/layout/bottom_sheet_restock_quantity.xml
@@ -48,7 +48,6 @@
             android:id="@+id/restockQuantity"
             android:layout_width="250dp"
             android:layout_height="@dimen/edit_text_height"
-            style="@style/editText"
             android:hint="Jumlah Restock"
             android:inputType="number"/>
 
@@ -65,7 +64,7 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/saveStockButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/medium_button_height"
         android:layout_marginTop="20dp"
         android:text="Simpan"
         style="@style/blueButtonStyle"
