--- a/app/src/main/res/layout/bottom_sheet_sort_stock.xml
+++ b/app/src/main/res/layout/bottom_sheet_sort_stock.xml
@@ -79,7 +79,7 @@
         android:id="@+id/dateStockRangeButton"
         style="@style/blueButtonStyle"
         android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/medium_button_height"
         android:text="Pilih tanggal"
         android:layout_marginStart="15dp"
         android:layout_marginTop="10dp"/>
@@ -118,7 +118,7 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/doneStockButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/medium_button_height"
         android:layout_marginTop="20dp"
         android:text="Done"
         style="@style/blueButtonStyle"
