--- a/app/src/main/res/layout/fragment_checkout.xml
+++ b/app/src/main/res/layout/fragment_checkout.xml
@@ -144,7 +144,7 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button_checkout"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/medium_button_height"
                 style="@style/blueButtonStyle"
                 android:text="Checkout"
                 android:padding="10dp"
