--- a/app/src/main/res/layout/fragment_introduction.xml
+++ b/app/src/main/res/layout/fragment_introduction.xml
@@ -39,48 +39,18 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.52" />
 
-    <ImageView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/texture_left"
-        app:layout_constraintBottom_toBottomOf="@id/guideline_left_texture"
-        app:layout_constraintDimensionRatio="1:3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/texture_right"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-
-    <ImageView
-        android:id="@+id/ellipse"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@drawable/ellips"
-        app:layout_constraintStart_toStartOf="@id/guideline_ellipse_left"
-        app:layout_constraintEnd_toEndOf="@+id/guideline_ellipse_right"
-        app:layout_constraintTop_toTopOf="@id/guideline_ellipse_top"
-        app:layout_constraintBottom_toBottomOf="@id/guideline_ellipse_bottom"
-        app:layout_constraintDimensionRatio="1:1" />
 
     <TextView
         android:id="@+id/welcome_text"
+        style="@style/h2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/h2"
-        android:layout_marginTop="@dimen/welcomeTextMargin"
-        app:layout_constraintTop_toTopOf="@id/guideline_left_texture"
-        app:layout_constraintStart_toStartOf="@+id/guideline_ellipse_left"
-        app:layout_constraintEnd_toEndOf="@id/guideline_ellipse_right"
-        app:layout_constraintBottom_toBottomOf="@id/ellipse"
+        android:gravity="center"
         android:text="@string/welcome_text"
         android:textAlignment="center"
-        android:gravity="center" />
+        app:layout_constraintEnd_toEndOf="@id/guideline_ellipse_right"
+        app:layout_constraintStart_toStartOf="@+id/guideline_ellipse_left"
+        app:layout_constraintTop_toTopOf="@id/guideline_left_texture" />
 
     <TextView
         android:id="@+id/small_welcome_text"
