--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -44,7 +44,7 @@
     </style>
 
     <style name="blueButtonStyle">
-        <item name="android:background">@drawable/blue_background</item>
+        <item name="android:background">@color/black</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/h4TextSize</item>
         <item name="android:textAllCaps">false</item>
