--- a/app/src/main/res/layout/cart_item_layout.xml
+++ b/app/src/main/res/layout/cart_item_layout.xml
@@ -15,7 +15,7 @@
             android:layout_width="200dp"
             android:layout_height="40dp"
             android:text="Amplop Paperline Biru Kecil 200/80 blablablalbla blalb albla"
-            android:style="@style/p"
+            style="@style/p"
             android:maxLines="2"
             android:ellipsize="end"
             app:layout_constraintTop_toTopOf="parent"
