--- a/app/src/main/res/layout/detail_history_list_layout.xml
+++ b/app/src/main/res/layout/detail_history_list_layout.xml
@@ -1,97 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardElevation="1dp"
-    android:layout_marginTop="2dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    app:cardCornerRadius="0dp"
+    android:layout_marginHorizontal="20dp"
+    app:cardElevation="0dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="5dp"
-        android:paddingBottom="10dp"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp" >
+        android:background="@drawable/card_bottom_border"
+        android:paddingHorizontal="8dp"
+        android:paddingVertical="16dp">
 
         <TextView
             android:id="@+id/product_text"
+            style="@style/p_bold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="NAMA PRODUK"
-            style="@style/h3_bold"
-            android:maxLines="2"
-            android:ellipsize="end"
-            app:layout_constraintTop_toTopOf="parent"
+            android:text="Amplop Paperline Biru Ukuran 16x16 Kilometer di Atas Permukaan Laut"
+            android:textColor="@color/text_primary"
+            android:paddingBottom="10dp"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/quantity_text"
+            style="@style/p"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="10"
-            style="@style/p"
-            app:layout_constraintTop_toBottomOf="@id/product_text"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"/>
+            app:layout_constraintTop_toBottomOf="@id/product_text" />
 
         <TextView
             android:id="@+id/unit_text"
+            style="@style/p"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="pack"
-            style="@style/p"
             app:layout_constraintStart_toEndOf="@id/quantity_text"
-            app:layout_constraintTop_toBottomOf="@id/product_text"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="10dp"/>
+            app:layout_constraintTop_toBottomOf="@id/product_text" />
 
         <TextView
             android:id="@+id/at_text"
+            style="@style/p"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
             android:text="&#64;"
-            style="@style/p"
             app:layout_constraintStart_toEndOf="@id/unit_text"
-            app:layout_constraintTop_toBottomOf="@id/product_text"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="10dp"/>
+            app:layout_constraintTop_toBottomOf="@id/product_text" />
 
         <TextView
             android:id="@+id/adjusted_price_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Rp. 10.000"
             style="@style/p"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:text="10.000"
             app:layout_constraintStart_toEndOf="@id/at_text"
-            app:layout_constraintTop_toBottomOf="@id/product_text"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="10dp"/>
+            app:layout_constraintTop_toBottomOf="@id/product_text" />
 
         <TextView
-            android:id="@+id/total_title"
+            android:id="@+id/total_value"
+            style="@style/p_bold"
+            android:textColor="@color/text_primary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TOTAL : "
-            style="@style/h4_bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/unit_text"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="10dp" />
-
-        <TextView
-            android:id="@+id/total_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Rp. 100.000"
-            style="@style/h4_bold"
-            app:layout_constraintTop_toBottomOf="@id/quantity_text"
-            app:layout_constraintStart_toEndOf="@id/total_title"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"/>
+            android:text="Rp100.000"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
