--- a/app/src/main/res/layout/product_list_layout.xml
+++ b/app/src/main/res/layout/product_list_layout.xml
@@ -1,69 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginTop="10dp"
-    app:cardElevation="2dp">
+    android:layout_marginHorizontal="20dp"
+    app:cardCornerRadius="0dp"
+    app:cardElevation="0dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="10dp"
-        android:paddingBottom="20dp"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp" >
+        android:background="@drawable/card_bottom_border"
+        android:paddingHorizontal="8dp"
+        android:paddingVertical="16dp">
 
-        <TextView
-            android:id="@+id/supplier_text"
-            android:layout_width="150dp"
-            android:layout_height="60dp"
-            android:text="(Supplier)"
-            style="@style/p"
-            android:maxLines="2"
-            android:ellipsize="end"
-            app:layout_constraintTop_toTopOf="parent"
+
+        <ImageView
+            android:id="@+id/product_image"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:contentDescription="Product Image"
+            android:src="@drawable/image_placeholder"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/product_name_text"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:text="Amplop Paperline Biru Kecil 200/80 blablablalbla blalb albla"
             style="@style/p_bold"
-            android:maxLines="3"
-            android:ellipsize="end"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/supplier_text"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"/>
+            android:text="Amplop "
+            android:textColor="@color/text_primary"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/product_image"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/capital_price_text"
+            android:id="@+id/supplier_text"
+            style="@style/p"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Harga Modal :"
-            style="@style/p_bold"
-            android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            app:layout_constraintTop_toBottomOf="@id/supplier_text"
-            app:layout_constraintStart_toStartOf="parent"/>
+            android:maxLines="2"
+            android:text="(Elham Syahrian Putra)"
+            app:layout_constraintStart_toStartOf="@id/product_name_text"
+            app:layout_constraintTop_toBottomOf="@id/product_name_text" />
 
         <TextView
             android:id="@+id/nominal_text"
+            style="@style/p_bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/product_name_text"
-            app:layout_constraintStart_toEndOf="@id/capital_price_text"
-            android:text="2.500.000"
-            style="@style/p_bold"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginStart="10dp"/>
+            android:text="Rp2.500.000"
+            android:textColor="@color/text_primary"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
