--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="background">#f8f8f8</color>
+
+    <color name="primary">#454545</color>
+    <color name="secondary">#ededed</color>
+
+    <color name="text_primary">#21292b</color>
+    <color name="text_secondary">#7f7f7f</color>
+
+
+
+
+
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
